# VoiceX

./: README.md
VoiceX-SpatialTest/: Version1.py
als_and_asthma_parkinsons_first_test/Projects/: Reverse_Engineer_Model.ipynb
als_and_asthma_parkinsons_first_test/Projects/.devcontainer/: devcontainer.json
als_and_asthma_parkinsons_first_test/Projects/VoiceX-Asthma and Neuro Dectection/: Home.py  Requirements.txt  requirements.txt
als_and_asthma_parkinsons_first_test/Projects/VoiceX-Asthma and Neuro Dectection/Models/: als_model.pkl  als_scaler.pkl  parkinsons_model.pkl
als_and_asthma_parkinsons_first_test/Projects/VoiceX-Asthma and Neuro Dectection/pages/: ALS_APP.py  ICBHI.py  Parkinson_app.py
als_and_asthma_parkinsons_first_test/Projects/VoiceX-Tuberculosis/app/: index.html  package-lock.json  package.json
als_and_asthma_parkinsons_first_test/Projects/VoiceX-Tuberculosis/app/src/: App.css  App.tsx  index.css
als_and_asthma_parkinsons_first_test/Projects/VoiceX-Tuberculosis/app/src/components/: GeoDashboard.tsx
als_and_asthma_parkinsons_first_test/Projects/VoiceX-Tuberculosis/voicex-docs/: INTEGRATION_GUIDE.md  QUICKSTART.md
als_and_asthma_parkinsons_first_test/Projects/VoiceX-Tuberculosis/voicex-edge/: Cargo.toml
als_and_asthma_parkinsons_first_test/Projects/VoiceX-Tuberculosis/voicex-edge/src/: audio.rs  geo.rs  lib.rs  main.rs  ml.rs  storage.rs  types.rs
als_and_asthma_parkinsons_first_test/Projects/VoiceX-Tuberculosis/voicex-python/: README.md  api_server.py  example_train_model.py  export_model.py  requirements.txt  test_api.py
dataset/: DestinationDataset_nui.json  SourceDataset_nui.json
factory/: tuberculosisvoicexdata.json
linkedService/: AzureBlobStorage1.json  HttpServer1.json
pipeline/: CopyTBscreenDataset.json
